test/compile_errors/err_no_std_missing_entry.w
//! args: --no-std
//! expect-check-fail: no_std requires @[entry] or @[no_main]

@[panic_handler]
fn on_panic -> Never: unreachable()

fn helper -> i32: 0
